trunk/Archive2/5b/9501a7507f3374/output
main.cpp:3:15: error: static_cast from 'const int *' to 'int *' is not allowed
    int * p = static_cast<int*>(&vv);
              ^~~~~~~~~~~~~~~~~~~~~~
main.cpp:7:16: error: static_cast from 'const int *' to 'int *' is not allowed
    int * pp = static_cast<int*>(&aa[1]);
               ^~~~~~~~~~~~~~~~~~~~~~~~~
2 errors generated.
